Revision history for App-Pocoirc

{{$NEXT}}

0.31  Wed Oct 20 00:35:29 GMT 2010
    - When using --trace, don't put quotes around stringified references
      to objects
    - Print a usage message when unrecognized non-options are passed
    - Improve the output of --trace by recursively dumping hashes/arrays
    - Call bsd_glob() on filenames before opening them, so we understand
      paths like '~/log_file'
    - Allow .yaml as an extension, not just .yml

0.30  Mon Oct 18 21:03:18 GMT 2010
    - Only load Module::Pluggable when we need it (for --list-plugins)
    - Only load Pod::Usage when we need it (with an invalid option)
    - Delay the loading of App::Pocoirc until we need it
    - Add the -F/--pid-file option to the usage message
    - Use a comma instead of a colon to separate the channel name and
      password with the --join option, since commas are not allowed in
      channel names, whereas some networks allow colons.

0.29  Sun Oct 3 19:53:28 GMT 2010
    - Document the 'class' config file option
    - Allow the 'lib' config option to be a string or an array of strings
    - Show event arguments with --trace

0.28  Sun Oct 3 15:29:41 GMT 2010
    - After daemonizing, notify the POE kernel that we have forked

0.27  Wed Sep 29 22:36:29 GMT 2010
    - Updated Pocoirc.pm's Pod to reflect some recent changes

0.26  Wed Sep 29 05:22:25 UTC 2010
    - Fix a problem with using the Status plugin on multiple networks

0.25  Wed Sep 29 05:03:27 UTC 2010
    - In the config, keep networks in a hash, not an array
    - Log which IRC class we're using (e.g. State)
    - Pass the network name and a status callback when registering plugins

0.24  Tue Sep 28 08:50:10 GMT 2010
    - Sort the plugin list emitted by -L
    - Use -a (add plugin) instead of -U for --plugin, and -A for --arg

0.23  Mon Sep 27 19:57:02 GMT 2010
    - Format the verbose output like other debugging output
    - Don't raise an exception when someone parts without a part message